updates to create resume lwc. Updates to package.xml and added tabs and fields to the project folder to fix deployment issues.

--- a/force-app/main/default/classes/BYROS_ResumeServiceTest.cls
+++ b/force-app/main/default/classes/BYROS_ResumeServiceTest.cls
@@ -82,7 +82,7 @@ private class BYROS_ResumeServiceTest {
     static void testGetProfiles() {
         //Test coverage for getProfiles
         Test.startTest();
-        List<ResumeService.ProfileList> profileList = ResumeService.getProfiles();
+        List<BYROS_ResumeService.ProfileList> profileList = BYROS_ResumeService.getProfiles();
         System.debug('Inside ResumeServiceTest.testGetProfiles, Testing coverage for getProfiles ' + profileList);
         Test.stopTest();
 
