Improve resume flow navigation, data refresh, and Education UI
- Remove cacheable=true from Apex @AuraEnabled methods to prevent stale Education data
- Handle step clicks in Create Resume path (add onclick) for better UX
- Add row action handling in Education datatable and introduce Education compact layout
- Update Education__c metadata accordingly

--- a/force-app/main/default/classes/BYROS_ResumeEducationService.cls
+++ b/force-app/main/default/classes/BYROS_ResumeEducationService.cls
@@ -3,7 +3,7 @@ public with sharing class BYROS_ResumeEducationService {
     private static final String EDUCATION_SEARCH_LIMIT = '10';
     private static final String EDUCATION_OBJECT = 'Education__c';
 
-    @AuraEnabled(cacheable=true)
+    @AuraEnabled
     public static List<Education__c> getUnlinkedResumeEducations(Id resumeId, Integer limitSize) {
         // Validate CRUD permissions
         if (!Schema.sObjectType.Resume_Education__c.isAccessible() || 
@@ -33,7 +33,7 @@ public with sharing class BYROS_ResumeEducationService {
 
     }
 
-    @AuraEnabled(cacheable=true)
+    @AuraEnabled
     public static List<Education__c> getResumeEducations(Id resumeId) {
         // Validate CRUD permissions
         if (!Schema.sObjectType.Resume_Education__c.isAccessible() || 
